QA: Additional changes for layout issues.

--- a/cacti/branches/main/include/main.css
+++ b/cacti/branches/main/include/main.css
@@ -30,7 +30,7 @@ th {
 
 td {
 	overflow: hidden;
-	line-height: 2.0em;
+	line-height: 1.5em;
 	font-family: Arial, Verdana, Helvetica, sans-serif;
 	font-size: 10px;
 }
@@ -183,6 +183,7 @@ td {
 	color: #FFFFFF;
 	cursor: pointer;
 	position-top: auto;
+	white-space: nowrap;
 	margin: 0px;
 	padding: 3px;
 	font-family: Arial, Verdana, Helvetica, sans-serif;
